--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+dependencies {
+    implementation 'com.github.sh0nk:matplotlib4j:0.4.0'
+}
+
 javafx {
     version = "11"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
