--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.sh0nk:matplotlib4j:0.4.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
 }
 
 javafx {
